--- a/index.html
+++ b/index.html
@@ -1,2 +1,22 @@
+<!DOCTYPE HTML>
+<html lang="ru">
 
-<img src="/img/fon.jpg">
+<head>
+	<meta charset="utf-8">
+	<meta name="keywords" content="вёрстка, HTML, CSS, блог"> <!-- Ключевые слова для поисковиков -->
+	<meta name="description" content="Блог о процессе обучения веб-технологиям">
+	<!-- краткое описание страницы при поисковой выдаче -->
+	<title>Резюме</title>
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&display=swap&subset=cyrillic"
+		rel="stylesheet">
+	<link href="css/normalize.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
+	<link rel="shortcut icon" href="/img/Favicon.png" type="image/x-icon">
+</head>
+<body>
+	<p>Привет киса</p>
+	<script></script>
+</body>
+<footer>
+	Подвал
+</footer>
