--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 </head>
 <body>
 	<p>Привет киса</p>
-	<script></script>
+
+	<script>
+		alert("JS подключен!")
+	</script>
+	</script src="/js/script.js"></script>
 </body>
 <footer>
 	Подвал
