--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML>
 <html lang="ru">
-
 <head>
 	<meta charset="utf-8">
 	<meta name="keywords" content="вёрстка, HTML, CSS, блог"> <!-- Ключевые слова для поисковиков -->
@@ -14,11 +13,20 @@
 	<link rel="shortcut icon" href="/img/Favicon.png" type="image/x-icon">
 </head>
 <body>
-	<p>Привет киса</p>
+	<ul>
+		<li>ФИО: Рудин Андрей Александрович</li>
+		<li>Возраст: 23 года</li>
+		<li>Javascript (типы данных(числа,логические, строки, специальные), операторы( математические, логические, унарные, тройные, конкатенация строк), динамическое приведение типов, переменные, условия(if, else if, else), циклы(while, do while))</li>
+		<li>CCS3:псевдоклассы, псевдоэлементы</li>
+		<li>HTML5:семантическая верстка</li>
+		<li>Примеры работ:</li>
+		<li><img src="img/MyPhoto.jpg" alt="Мое фото"></li>
+	</ul>
 
 	<script>
 		alert("JS подключен!")
 	</script>
+
 	</script src="/js/script.js"></script>
 </body>
 <footer>
