--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<meta name="keywords" content="вёрстка, HTML, CSS, блог"> <!-- Ключевые слова для поисковиков -->
-	<meta name="description" content="Блог о процессе обучения веб-технологиям">
+	<meta name="keywords" content="Front-end, Developer"> <!-- Ключевые слова для поисковиков -->
+	<meta name="description" content="Резюме Front-end Developer">
 	<!-- краткое описание страницы при поисковой выдаче -->
 	<title>Резюме</title>
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&display=swap&subset=cyrillic"
@@ -16,19 +16,26 @@
 	<ul>
 		<li>ФИО: Рудин Андрей Александрович</li>
 		<li>Возраст: 23 года</li>
-		<li>Javascript (типы данных(числа,логические, строки, специальные), операторы( математические, логические, унарные, тройные, конкатенация строк), динамическое приведение типов, переменные, условия(if, else if, else), циклы(while, do while))</li>
+		<li>Желаемая должность: Junior Front-end Developer</li>
+		<li>Желаемая заработная плата: 500 000 рублей</li>
+		<li>Javascript (типы данных(числа,логические, строки, специальные), операторы( математические, логические, унарные, тройные, конкатенация строк), динамическое приведение типов, переменные, условия(if, else if, else), циклы(while, do while, for, break, continue)) </li>
 		<li>CCS3:псевдоклассы, псевдоэлементы</li>
 		<li>HTML5:семантическая верстка</li>
+		<li>Другие навыки: Git, VSCode, Sublime3</li>
 		<li>Примеры работ:</li>
 		<li><img src="img/MyPhoto.jpg" alt="Мое фото"></li>
+		<li>Опыт работы: написание скриптов для программы Autodesk Revit на языке IronPython</li>
 	</ul>
 
-	<script>
+	<!-- <script>
 		alert("JS подключен!")
-	</script>
+	</script> -->
 
 	</script src="/js/script.js"></script>
 </body>
 <footer>
-	Подвал
+	<ul>
+		<li>Контактный телефон:<a href="tel:89522058346"> 8(952)205-83-46</a></li>
+		<li>Электронная почта:<a href="mailto:rudin1996@mail.ru"> rudin1996@mail.ru</a></li>
+	</ul>
 </footer>
