--- a/index.html
+++ b/index.html
@@ -18,10 +18,34 @@
 		<li>Возраст: 23 года</li>
 		<li>Желаемая должность: Junior Front-end Developer</li>
 		<li>Желаемая заработная плата: 500 000 рублей</li>
-		<li>Javascript (типы данных(числа,логические, строки, специальные), операторы( математические, логические, унарные, тройные, конкатенация строк), динамическое приведение типов, переменные, условия(if, else if, else), циклы(while, do while, for, break, continue)) </li>
+		<li>Javascript
+			<ol>
+				<li>типы данных(числа,логические, строки, специальные)</li>
+				<li>операторы(сравнения, математические, логические, унарные, тройные, конкатенация строк)</li>
+				<li>динамическое приведение типов</li>
+				<li>переменные(глобальные, локальные, области видимости переменных)</li>
+				<li>условия(if, else if, else, switch-case) </li>
+				<li>циклы(while, do while, for, break, continue)</li>
+				<li>string.length(длина строки)</li>
+				<li>функции( стрелочные =>, function, значение аргумента по умолчанию или если его не задали; вызывают побочный эффект или возвращают значение)</li>
+				<li>литерал шаблона</li>
+				<li>стек вызовов(информация о контексте того, где выполнять код дальше после вызова функции) </li>
+				<li>необязательные аргументы(больше требуемых функция игнорирует, если недостаточно, замняет их на underfine)</li>
+				<li>Замыкание(вызов переменной, созданной внутри функции внутри функции через другую функцию)</li>
+				<li>Рекурсия(использование функции внутри себя самой несколько раз )</li>
+				<li>Чистая функция(не создает и не зависит от побочных эффектов) просто возвращет значение</li>
+				<li>Массивы(извлечение элемента по индексу)</li>
+				<li>свойства value.x value[x](вычисляет то, что в кавдратных скобках и пытается преобразовать в строку-свойство)</li> 
+				<li>Методы(свойства содержащие функции, push, pop)</li>
+				<li>Стек структура данных в которую можно помещать и извлекать данные в обратном порядке</li>
+				<li>Объект - произвольный набор свойсвт(создание объекта,создание свойсвт)</li>
+			</ol>
+		</li>
 		<li>CCS3:псевдоклассы, псевдоэлементы</li>
 		<li>HTML5:семантическая верстка</li>
-		<li>Другие навыки: Git, VSCode, Sublime3</li>
+		<li>PHP</li>
+		<li>Python</li>
+		<li>Другие навыки: Git, VSCode, Sublime3, Создание хостинга, покупка домена</li>
 		<li>Примеры работ:</li>
 		<li><img src="img/MyPhoto.jpg" alt="Мое фото"></li>
 		<li>Опыт работы: написание скриптов для программы Autodesk Revit на языке IronPython</li>
