--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
 		<li>Желаемая заработная плата: 500 000 рублей</li>
 		<li>Javascript
 			<ol>
-				<li>типы данных(числа,логические, строки, специальные)</li>
+				<li>типы данных(числа, логические, строки, специальные(NaN, null, underfine, infinity, -infinity), объекты, массивы</li>
+				<li>Доступ к свойствам null или underfine осуществляется с помощью value.prop</li>
 				<li>операторы(сравнения, математические, логические, унарные, тройные, конкатенация строк)</li>
 				<li>динамическое приведение типов</li>
 				<li>переменные(глобальные, локальные, области видимости переменных)</li>
 				<li>условия(if, else if, else, switch-case) </li>
-				<li>циклы(while, do while, for, break, continue)</li>
+				<li>циклы(while, do while, for(of), break, continue)</li>
 				<li>string.length(длина строки)</li>
-				<li>функции( стрелочные =>, function, значение аргумента по умолчанию или если его не задали; вызывают побочный эффект или возвращают значение)</li>
+				<li>функции( стрелочные =>, function, значение аргумента по умолчанию или если его не задали; вызывают побочный эффект или возвращают значение, , бесконечное число аргументов function max(... numbers){}, функции высшег опорядка(принимают в качестве аргумента другие функции))</li>
 				<li>литерал шаблона</li>
 				<li>стек вызовов(информация о контексте того, где выполнять код дальше после вызова функции) </li>
 				<li>необязательные аргументы(больше требуемых функция игнорирует, если недостаточно, замняет их на underfine)</li>
@@ -39,13 +40,19 @@
 				<li>Методы(свойства содержащие функции, push, pop)</li>
 				<li>Стек структура данных в которую можно помещать и извлекать данные в обратном порядке</li>
 				<li>Объект - произвольный набор свойсвт(создание объекта,создание свойсвт)</li>
-			</ol>
+				<li>Объекты изменяемы, строки, числа нет</li>
+				<li>Индентичность -свойство объектов имеющих одинаковые привязки</li>
+				<li>свойcтва массивов remove,concat,slice,indexOf,lastIndexOf, shift, unshift, push, pop</li>
+				<li>свойства строк slice indexOf, trim, padStart, join split repeat length</li>
+				<li>развертывание max(...number) разворачивает массив для принятия аргументов</li>
+				<li>JSON объектная нотация JS данные в виде иерархического описания, сериализация, JSON.stringify - перевести в формат записи JSON, JSON.parse перевести в формат записи JS</li>
+				<li>Списки</li>
 		</li>
 		<li>CCS3:псевдоклассы, псевдоэлементы</li>
 		<li>HTML5:семантическая верстка</li>
 		<li>PHP</li>
 		<li>Python</li>
-		<li>Другие навыки: Git, VSCode, Sublime3, Создание хостинга, покупка домена</li>
+		<li>Другие навыки: Git, VSCode(plagine, debug, git), Sublime3, Создание хостинга, покупка домена</li>
 		<li>Примеры работ:</li>
 		<li><img src="img/MyPhoto.jpg" alt="Мое фото"></li>
 		<li>Опыт работы: написание скриптов для программы Autodesk Revit на языке IronPython</li>
