--- a/index.html
+++ b/index.html
@@ -1,72 +1,138 @@
 <!DOCTYPE HTML>
 <html lang="ru">
-<head>
-	<meta charset="utf-8">
-	<meta name="keywords" content="Front-end, Developer"> <!-- Ключевые слова для поисковиков -->
-	<meta name="description" content="Резюме Front-end Developer">
-	<!-- краткое описание страницы при поисковой выдаче -->
-	<title>Резюме</title>
-	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&display=swap&subset=cyrillic"
-		rel="stylesheet">
-	<link href="css/normalize.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
-	<link rel="shortcut icon" href="/img/Favicon.png" type="image/x-icon">
-</head>
-<body>
-	<ul>
-		<li>ФИО: Рудин Андрей Александрович</li>
-		<li>Возраст: 23 года</li>
-		<li>Желаемая должность: Junior Front-end Developer</li>
-		<li>Желаемая заработная плата: 500 000 рублей</li>
-		<li>Javascript
-			<ol>
-				<li>типы данных(числа, логические, строки, специальные(NaN, null, underfine, infinity, -infinity), объекты, массивы</li>
-				<li>Доступ к свойствам null или underfine осуществляется с помощью value.prop</li>
-				<li>операторы(сравнения, математические, логические, унарные, тройные, конкатенация строк)</li>
-				<li>динамическое приведение типов</li>
-				<li>переменные(глобальные, локальные, области видимости переменных)</li>
-				<li>условия(if, else if, else, switch-case) </li>
-				<li>циклы(while, do while, for(of), break, continue)</li>
-				<li>string.length(длина строки)</li>
-				<li>функции( стрелочные =>, function, значение аргумента по умолчанию или если его не задали; вызывают побочный эффект или возвращают значение, , бесконечное число аргументов function max(... numbers){}, функции высшег опорядка(принимают в качестве аргумента другие функции))</li>
-				<li>литерал шаблона</li>
-				<li>стек вызовов(информация о контексте того, где выполнять код дальше после вызова функции) </li>
-				<li>необязательные аргументы(больше требуемых функция игнорирует, если недостаточно, замняет их на underfine)</li>
-				<li>Замыкание(вызов переменной, созданной внутри функции внутри функции через другую функцию)</li>
-				<li>Рекурсия(использование функции внутри себя самой несколько раз )</li>
-				<li>Чистая функция(не создает и не зависит от побочных эффектов) просто возвращет значение</li>
-				<li>Массивы(извлечение элемента по индексу)</li>
-				<li>свойства value.x value[x](вычисляет то, что в кавдратных скобках и пытается преобразовать в строку-свойство)</li> 
-				<li>Методы(свойства содержащие функции, push, pop)</li>
-				<li>Стек структура данных в которую можно помещать и извлекать данные в обратном порядке</li>
-				<li>Объект - произвольный набор свойсвт(создание объекта,создание свойсвт)</li>
-				<li>Объекты изменяемы, строки, числа нет</li>
-				<li>Индентичность -свойство объектов имеющих одинаковые привязки</li>
-				<li>свойcтва массивов remove,concat,slice,indexOf,lastIndexOf, shift, unshift, push, pop</li>
-				<li>свойства строк slice indexOf, trim, padStart, join split repeat length</li>
-				<li>развертывание max(...number) разворачивает массив для принятия аргументов</li>
-				<li>JSON объектная нотация JS данные в виде иерархического описания, сериализация, JSON.stringify - перевести в формат записи JSON, JSON.parse перевести в формат записи JS</li>
-				<li>Списки</li>
-		</li>
-		<li>CCS3:псевдоклассы, псевдоэлементы</li>
-		<li>HTML5:семантическая верстка</li>
-		<li>PHP</li>
-		<li>Python</li>
-		<li>Другие навыки: Git, VSCode(plagine, debug, git), Sublime3, Создание хостинга, покупка домена</li>
-		<li>Примеры работ:</li>
-		<li><img src="img/MyPhoto.jpg" alt="Мое фото"></li>
-		<li>Опыт работы: написание скриптов для программы Autodesk Revit на языке IronPython</li>
-	</ul>
+	<head>
+		<meta charset="utf-8">
+		<meta name="keywords" content="Front-end, Developer">
+		<meta name="description" content="Резюме Front-end Developer">
+		<title>Продвижение и создание сайтов</title>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+		<link href="css/normalize.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
+		<link rel="shortcut icon" href="/img/Favicon.png" type="image/x-icon">
+	</head>
+	<body>
+		<main>
+			<ul class="main-menu">
+				<li class="paragraph"><a href="#">Продукты и услуги</a></li>
+				<li class="paragraph"><a href="#">О компании</a></li>
+				<li class="paragraph"><a href="#">Отзывы</a></li>
+				<li class="paragraph logo"><a href="#"><img src="img/logo.png" width="100"></a></li>
+				<li class="paragraph"><a href="#">Вопросы и ответы</a></li>
+				<li class="paragraph"><a href="#">Контакты</a></li>
+				<li class="paragraph"><a href="#">Сотрудники</a></li>
+				<li class="paragraph entry"><a href="#">Вход</a></li>
+			</ul>
+			<p>Обратный звонок</p>
+			<p>Спрайты</p>
+		</main>
+		<footer>
+			<div class="location">
+				<p>
+					г.Санкт-Петербург<br>
+					Ленинградская область<br>
+					Проспект Большевиков 31<br>
+					Квартира 132<br>
+					Режим работы: круглосуточно<br>
+					Все для вас
+				</p>
+			</div>
+			<div class="contacts">
+				<div>
+					<span>Контактный телефон:</span>
+					<a href="tel:89522058346">8(952)205-83-46</a>
+				</div>
+				<div>
+					<span>Электронная почта: </span>
+					<a href="mailto:rudin1996@mail.ru">rudin1996@mail.ru</a>
+				</div>
+			</div>
+			<div class="social">
+				<a href="#" class="button vk"><img src="img/vk.png" width="50">Вконтакте</a>
+				<a href="#" class="button fb"><img src="img/fb.svg" width="50">Фейсбук</a>
+				<a href="#" class="button ins"><img src="img/inst.png" width="50">Инстаграмм</a>
+				<a href="#" class="button ins"><img src="img/whatsapp.png" width="50">Whatsapp</a>
+				<a href="#" class="button ins"><img src="img/viber.png" width="50">Viber</a>
+				<a href="#" class="button ins"><img src="img/telegram.png" width="50">Telegram</a>
+			</div>
+			<div class="authors">
+				<p>
+					Автор сайта:<br>
+					Рудин Андрей<br>
+				</p>
+			</div>
+		</footer>
 
-	<!-- <script>
+		<ul>
+			<li>ФИО: Рудин Андрей Александрович</li>
+			<li>Возраст: 23 года</li>
+			<li>Желаемая должность: Junior Front-end Developer</li>
+			<li>Желаемая заработная плата: 500 000 рублей</li>
+			<li>Javascript
+				<ol>
+					<li>типы данных(числа, логические, строки, специальные(NaN, null, underfine, infinity, -infinity),
+						объекты, массивы</li>
+					<li>операторы(сравнения(==, ===), математические, логические, унарные, тройные, конкатенация строк)
+					</li>
+					<li>динамическое приведение типов</li>
+					<li>переменные(глобальные, локальные, области видимости переменных)</li>
+					<li>условия(if, else if, else, switch-case) </li>
+					<li>циклы(while, do while, for(of), break, continue,forEach, for)</li>
+					<li>Методы и свойства для строк: length,slice, indexOf, trim, padStart, join, split, repeat</li>
+					<li>Методы(свойства содержащие функции) и свойства для массива: push,pop,shift,unshift, length,
+						array[i], remove,concat,slice,indexOf,lastIndexOf, forEach, filter, map,reduce </li>
+					<li>функции: способы создания(filet () => {}, function filter({}),let filter = function(){}),
+						значение аргумента по умолчанию или если его не задали; бесконечное число аргументов или
+						раскрытие массива function max(... numbers){}, функции высшего порядка(принимают в качестве
+						аргумента другие функции), чистые функции(не меняют окружение программы, а создают новые
+						объекты)</li>
+					<li>литерал шаблона "$(2+2) = 2+2" -> "4 = 2+2"</li>
+					<li>Понятия</li>
+					<li>стек вызовов(информация о контексте того, где выполнять код дальше после вызова функции)
+						структура данных в которую можно помещать и извлекать данные в обратном порядке </li>
+					<li>Замыкание(вызов переменной, созданной внутри функции внутри функции через другую функцию)</li>
+					<li>Рекурсия(использование функции внутри себя самой несколько раз )</li>
+					<li>свойства value.x value[x](вычисляет то, что в квадратных скобках и пытается преобразовать в
+						строку-свойство, используется ,если свойства объекта состоит из нескольких слов)</li>
+					<li>Объект - произвольный набор свойств(создание объекта,создание свойств)</li>
+					<li>Объекты изменяемы, строки, числа нет</li>
+					<li>Индентичность -свойство объектов имеющих одинаковые привязки</li>
+					<li>развертывание max(...number) разворачивает массив для принятия аргументов</li>
+					<li>JSON объектная нотация JS данные в виде иерархического описания, сериализация, JSON.stringify -
+						перевести в формат записи JSON, JSON.parse перевести в формат записи JS</li>
+					<li>Списки</li>
+				</ol>
+			</li>
+			<li>CCS3:псевдоклассы, псевдоэлементы</li>
+			<li>HTML5:семантическая верстка,использование загружаемых шрифтов</li>
+			<li>PHP</li>
+			<li>Python</li>
+			<li>Другие навыки: Git, VSCode(plagine, debug, git), Sublime3, Создание хостинга, покупка домена</li>
+			<li>Примеры работ:</li>
+			<li>Опыт работы: написание скриптов для программы Autodesk Revit на языке IronPython</li>
+		</ul>
+		<div class="myphoto">
+			<img src="img/MyPhoto.jpg" alt="Мое фото">
+			<!-- <img src="img/MyPhoto1.jpg" alt="Мое фото"> -->
+		</div>
+		<div class="flextest">
+			<img src="img/flex1.gif" class="cat cat1" width="500">
+			<!-- <p style="font-size:250px">Дорого</p> -->
+			<img src="img/flex2.gif" class="cat cat2" width="500">
+			<!-- <p style="font-size:350px">Быстро</p> -->
+			<img src="img/flex3.png" class="cat cat3" width="500">
+			<!-- <p style="font-size:150px">Богато</p> -->
+			<img src="img/flex4.png" class="cat cat4" width="500">
+			<img src="img/flex5.png" class="cat cat5" width="500">
+			<img src="img/flex6.png" class="cat cat6" width="500">
+			<img src="img/flex7.png" class="cat cat7" width="500">
+		</div>
+		<div class="flextest">
+			<img src="img/flex1.gif" class="cat cat10" width="500">
+		</div>
+
+		<!-- <script>
 		alert("JS подключен!")
-	</script> -->
-
-	</script src="/js/script.js"></script>
-</body>
-<footer>
-	<ul>
-		<li>Контактный телефон:<a href="tel:89522058346"> 8(952)205-83-46</a></li>
-		<li>Электронная почта:<a href="mailto:rudin1996@mail.ru"> rudin1996@mail.ru</a></li>
-	</ul>
-</footer>
+		</script> -->
+		</script src="/js/script.js"></script>
+	</body>
+</html>
